2x Work, 60% Load - SRE 2026 - update rag/docs/06-runtime/lscpu-runtime-analysis-guide.md